--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,10 @@
 @import 'vars';
 @import 'header';
+@import 'elements';
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   background: #3378ce;
@@ -13,27 +18,15 @@ body {
   margin: 0 auto;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-    h1 {
-      font-size: 60px;
-      line-height: 1;
-      letter-spacing: -1px;
-    }
+.main-content {
+  background: white;
+  height: 2000px;
 }
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+.no-responsive {
+  .container {
+    width: 1000px;
+  }  
 }
 
 @media (min-width: $screen-sm-min) {
