--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,5 +1,6 @@
 .main-header {
   margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 .main-header-actions {
@@ -28,5 +29,5 @@
 .main-header-search {
   width: 100%;
   padding: 5px;  
-  margin: 15px 0 5px;
+  margin: 10px 0 5px;
 }
