--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -1,7 +1,21 @@
-ul.nav-tabs {
-  padding: 0;
-  list-style-type: none;
+@import 'elements/carousel';
 
+.divider {
+  padding: 0 5px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+ul.norm-ul {
+  padding-left: 40;
+  list-style-type: disc;
+}
+
+ul.nav-tabs {
   a {
     margin-right: -4px;
     padding: 14px 36px 11px;
