--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -20,14 +20,11 @@
       display: inline-block;
     }
   }
-
-  .divider {
-    padding: 0 5px;
-  }
 }
 
 .main-header-search {
   width: 100%;
-  padding: 5px;  
-  margin: 10px 0 5px;
+  padding: 3px 7px;  
+  margin: 10px 0 15px;
+  font-size: 12px;
 }
