--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,14 +12,14 @@ body {
   background: #3378ce;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 12px;
-  color: #333;
+  color: #282b2e;
 }
 
 hr {
   width: 100%;
   margin: 20px 0;
 
-  /* TODO:  For some reason, I can't get this lighter... this is mega hacky but it's close */
+  // TODO:  For some reason, I can't get this lighter... this is mega hacky but it's close
   opacity: .5;
   // border-color: white;
 }
@@ -32,7 +32,7 @@ hr {
   padding: 20px;
 }
 
-.browse-categories {
+section.browse-categories {
   width: 176px;
   float: left;
   font-size: 14px;
@@ -53,7 +53,7 @@ hr {
   }
 }
 
-.recent-articles {
+section.recent-articles {
   width: 470px;
   float: left;
 
