--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -99,7 +99,10 @@ section.current-contests {
   li {
     display: block;
     overflow: auto;
-    margin-bottom: 10px;
+  }
+
+  li + li {
+    margin-top: 10px;
   }
 
   a {
