--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -195,11 +195,44 @@ ul.nav-tabs {
 .video-thumb {
   display: inline-block;
   position: relative;
+  cursor: pointer;
   margin: 0 -2px 20px 20px;
 
   label {
+    width: 100%;
     position: absolute;
-    bottom: 0;
+    left: 0;
+    bottom: 3px;
+    line-height: 30px;
+    font-weight: bold;
+    padding: 0 15px;
+    background-color: rgba(227,227,227,.8);
+  }
+
+  &:before {
+    position: absolute;
+    top: 32%;
+    left: 39%;
+    display: block;
+    content: "";
+    background-color: rgba(40, 43, 46, .7);
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    border: 2px solid white;
+  }
+
+  &:after {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 0 10px 17.3px;
+    border-color: transparent transparent transparent #d7d5d6;
+    position: absolute;
+    top: 39%;
+    left: 46%;
+    display: block;
+    content: "";
   }
 }
 
