--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -194,6 +194,14 @@ ul.nav-tabs {
   border-top: 1px solid #969696;
 }
 
+.img-caption {
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  width: 100%;
+  background-color: rgba(227,227,227,.8);
+}
+
 .video-thumbs {
   padding-top: 20px;
   margin-left: -20px;
@@ -206,14 +214,9 @@ ul.nav-tabs {
   margin: 0 -2px 20px 20px;
 
   label {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 3px;
     line-height: 30px;
     font-weight: bold;
     padding: 0 15px;
-    background-color: rgba(227,227,227,.8);
   }
 
   &:before {
