--- a/app/styles/elements/carousel.scss
+++ b/app/styles/elements/carousel.scss
@@ -2,8 +2,26 @@
 
 }
 
-.carousel-img-active {
-  padding-bottom: 10px;
+.carousel-active {
+  margin-bottom: 10px;
+  position: relative;
+
+  h1 {
+    font-size: 24px;
+    text-transform: uppercase;
+  }
+
+  h1, p {
+    margin: 0;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .img-caption {
+    padding: 12px 15px;
+  }
 }
 
 .carousel-thumbs {
