--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -1,3 +1,4 @@
+@import 'vars';
 @import 'elements/carousel';
 
 .divider {
@@ -17,6 +18,8 @@
   font-weight: bold;
   text-transform: uppercase;
 }
+
+/* Triangle provided by:  http://apps.eky.hk/css-triangle-generator/ */
 
 .icon-triangle {
   width: 0;
@@ -101,7 +104,7 @@ ul.nav-tabs {
 }
 
 .heading-primary {
-  background-color: #0084d9;
+  background-color: $blue;
 
   h3 {
     color: white;
