IE8 support — fixed some styles, plus added “selectivzr” library to use last-child selectors in CSS in IE8.

--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -202,6 +202,7 @@ ul.nav-tabs {
   left: 0;
   bottom: 3px;
   width: 100%;
+  background-color: rgb(227,227,227);
   background-color: rgba(227,227,227,.8);
 }
 
@@ -228,6 +229,7 @@ ul.nav-tabs {
     left: 39%;
     display: block;
     content: "";
+    background-color: rgb(40, 43, 46);
     background-color: rgba(40, 43, 46, .7);
     border-radius: 100%;
     width: 40px;
