--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 
 body {
   background: #3378ce;
+  background: url('/images/main-bg.jpg') center top no-repeat;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 12px;
   color: #282b2e;
@@ -18,6 +19,11 @@ body {
 a {
   color: #282b2e;
   text-decoration: none;
+}
+
+/* IE8 fix */
+a img {
+  border: none;
 }
 
 hr {
@@ -115,12 +121,5 @@ section.current-contests {
   a {
     font-weight: bold;
     line-height: 17px;
-  }
-}
-
-
-@media (min-width: $screen-sm-min) {
-  body {
-    background: url('/images/main-bg.jpg') center top no-repeat;
   }
 }
