--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -251,6 +251,16 @@ ul.nav-tabs {
   }
 }
 
+.collapsable {
+  transition: max-height 0.6s ease;
+  overflow: hidden;
+  max-height: 200px;
+
+  &.collapsed {
+    max-height: 0;
+  } 
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
